--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,6 +509,12 @@ thead, tbody, tfoot, tr, td, th {
   border-style: solid;
   border-width: 0; }
 
+.text-center {
+  text-align: center; }
+
+.bg-white {
+  background: #fff; }
+
 /* HEADER TOP */
 header .top__header {
   background: #fff;
@@ -684,7 +690,8 @@ header .middle__header {
 
 .card__list .container {
   padding-inline: 40px;
-  padding-block-start: 90px; }
+  padding-block-start: 90px;
+  padding-block-end: 10px; }
   .card__list .container .wrapper {
     display: grid;
     grid-template-columns: 1fr;
@@ -720,38 +727,58 @@ header .middle__header {
 
 .widgets .container {
   padding-inline: 40px;
-  padding-block: 20px; }
+  padding-block: 10px; }
   .widgets .container .wrapper {
     display: flex;
-    flex-direction: column;
-    background: #fff; }
+    flex-direction: column; }
+    .widgets .container .wrapper.chart-bar {
+      gap: 20px; }
+    .widgets .container .wrapper h6 {
+      font-size: 1.2rem;
+      padding-block: 10px;
+      text-align: center; }
     .widgets .container .wrapper .header-widget {
       display: flex;
       align-items: center;
       justify-content: space-between;
       color: #212a2f;
-      padding: 20px; }
-    .widgets .container .wrapper .number_active {
+      padding-inline: 20px;
+      padding-block: 10px; }
+    .widgets .container .wrapper .content-widget {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #1b3340;
-      margin: 20px;
-      padding: 40px; }
-      .widgets .container .wrapper .number_active p {
-        color: #fff;
-        font-size: 3rem; }
-    .widgets .container .wrapper .details {
-      padding: 20px; }
-      .widgets .container .wrapper .details table {
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%; }
+      .widgets .container .wrapper .content-widget .number_active {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #1b3340;
+        margin: 20px;
+        padding: 40px;
         width: 100%; }
-        .widgets .container .wrapper .details table thead {
-          border-bottom: 1px solid #ebebeb;
-          padding-block: 10px; }
-        .widgets .container .wrapper .details table :is(td, th) {
-          font-size: 1.5rem; }
-        .widgets .container .wrapper .details table .text-end {
-          margin-left: -100px; }
+        .widgets .container .wrapper .content-widget .number_active p {
+          color: #fff;
+          font-size: 3rem; }
+      .widgets .container .wrapper .content-widget .details {
+        width: 100%;
+        padding: 20px; }
+        .widgets .container .wrapper .content-widget .details table {
+          width: 100%; }
+          .widgets .container .wrapper .content-widget .details table thead {
+            border-bottom: 1px solid #ebebeb;
+            padding-block: 10px; }
+          .widgets .container .wrapper .content-widget .details table :is(td, th) {
+            font-size: 1.5rem; }
+          .widgets .container .wrapper .content-widget .details table .text-end {
+            margin-left: -100px; }
+    .widgets .container .wrapper #myChart {
+      padding-inline: 20px; }
+
+.charts .container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; }
 
 @media (min-width: 575px) {
   .card__list .wrapper {
@@ -762,7 +789,11 @@ header .middle__header {
 @media (min-width: 768px) {
   /* Cards */
   .card__list .card__item {
-    flex-basis: 49%; } }
+    flex-basis: 49%; }
+  .content-widget {
+    display: grid !important;
+    grid-template-columns: 200px 1fr;
+    gap: 20px; } }
 
 @media (min-width: 992px) {
   /* Cards */
@@ -802,7 +833,17 @@ header .middle__header {
       background: white;
       color: black; }
   .close-btn {
-    display: none; } }
+    display: none; }
+  .content-widget {
+    display: grid !important;
+    grid-template-columns: 200px 1fr;
+    gap: 20px; }
+  .charts .container {
+    display: grid !important;
+    grid-template-columns: 49% 49%;
+    gap: 20px; }
+    .charts .container .chart-bar {
+      height: fit-content; } }
 
 @media (min-width: 1200px) {
   /* Cards */
