--- a/assets/scss/default/custom.scss
+++ b/assets/scss/default/custom.scss
@@ -309,3 +309,10 @@ thead, tbody, tfoot, tr, td, th {
   border-style: solid;
   border-width: 0;
 }
+
+.text-center{
+  text-align: center;
+}
+.bg-white{
+  background:$white;
+}
