--- a/assets/css/responsive/responsive.css
+++ b/assets/css/responsive/responsive.css
@@ -7,7 +7,11 @@
 @media (min-width: 768px) {
   /* Cards */
   .card__list .card__item {
-    flex-basis: 49%; } }
+    flex-basis: 49%; }
+  .content-widget {
+    display: grid !important;
+    grid-template-columns: 200px 1fr;
+    gap: 20px; } }
 
 @media (min-width: 992px) {
   /* Cards */
@@ -47,7 +51,17 @@
       background: white;
       color: black; }
   .close-btn {
-    display: none; } }
+    display: none; }
+  .content-widget {
+    display: grid !important;
+    grid-template-columns: 200px 1fr;
+    gap: 20px; }
+  .charts .container {
+    display: grid !important;
+    grid-template-columns: 49% 49%;
+    gap: 20px; }
+    .charts .container .chart-bar {
+      height: fit-content; } }
 
 @media (min-width: 1200px) {
   /* Cards */
