--- a/assets/scss/default/widgets.scss
+++ b/assets/scss/default/widgets.scss
@@ -1,51 +1,84 @@
 .widgets {
-    .container{
-        padding-inline: 40px;
-        padding-block: 20px;
-        .wrapper{
-            display: flex;
-            flex-direction: column;
-            background: $white;
-            .header-widget{
+  .container {
+    padding-inline: 40px;
+    padding-block: 10px;
 
-                display:flex;
-                align-items: center;
-                justify-content: space-between;
-                color: $black;
-                padding:20px;
-            }
-            .number_active{
-               display: flex;
-               align-items: center;
-               justify-content: center;
-               background: $third-color;
-               margin: 20px;
-               padding: 40px;
+    .wrapper 
+    {
 
-               p{
-                color: $white;
-                font-size: $fs-5;
-               }
-            }
+      &.chart-bar{
+        gap: 20px;
+  
+      }
+      display: flex;
+      flex-direction: column;
 
-            .details{
-                padding:20px;
-                table{
-                    width: 100%;
+      h6{
+        font-size: $fs-8;
+        padding-block: 10px;
+        text-align: center;
+      }
+      .header-widget {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: $black;
+        padding-inline: 20px;
+        padding-block: 10px;
+      }
 
-                    thead{
-                        border-bottom: 1px solid $silver;
-                        padding-block: 10px;
-                    }
-                    :is(td,th){
-                        font-size: $fs-7;
-                    }
-                    .text-end{
-                        margin-left: -100px;
-                    }
-                }
-            }
+      .content-widget{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+          .number_active {
+              display: flex;
+              align-items: center;
+        justify-content: center;
+        background: $third-color;
+        margin: 20px;
+        padding: 40px;
+        width: 100%;
+
+        p {
+            color: $white;
+            font-size: $fs-5;
+        }
+        
+      }
+
+      .details {
+        width: 100%;
+
+          padding: 20px;
+        table {
+          width: 100%;
+
+          thead {
+            border-bottom: 1px solid $silver;
+            padding-block: 10px;
+          }
+          :is(td, th) {
+            font-size: $fs-7;
+          }
+          .text-end {
+            margin-left: -100px;
+          }
+        }
+      }
+    }
+      #myChart{
+        padding-inline: 20px;
+      }
     }
   }
+}
 
+.charts{
+  .container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
