--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,18 +502,55 @@ input[type="radio"] {
   float: left; }
 
 table {
-  border-collapse: collapse; }
+  border-collapse: collapse;
+  padding: 10px; }
 
 thead, tbody, tfoot, tr, td, th {
   border-color: inherit;
   border-style: solid;
-  border-width: 0; }
+  border-width: 0;
+  text-align: left; }
+
+thead {
+  border-bottom: 1px solid #ebebeb; }
 
 .text-center {
   text-align: center; }
 
 .bg-white {
   background: #fff; }
+
+.badge {
+  display: inline-block;
+  padding: 2px 10px;
+  background: #011a28;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 900; }
+
+.round__badge {
+  display: inline-block;
+  padding: 5px 5px;
+  background: #011a28;
+  color: #fff;
+  border-radius: 50%;
+  font-weight: 900;
+  font-size: 0.8rem; }
+
+.red {
+  background: #dc3545; }
+
+.yellow {
+  background: #ffc107; }
+
+.green {
+  background: #28a745; }
+
+.container {
+  transition: 1s; }
+
+.p__inline__20 {
+  padding-inline: 20px; }
 
 /* HEADER TOP */
 header .top__header {
@@ -781,13 +818,18 @@ header .middle__header {
   gap: 20px; }
 
 @media (min-width: 575px) {
+  .container {
+    max-width: 540px;
+    margin-inline: auto; }
   .card__list .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr !important;
     gap: 10px; } }
 
 @media (min-width: 768px) {
-  /* Cards */
+  .container {
+    max-width: 740px;
+    margin-inline: auto; }
   .card__list .card__item {
     flex-basis: 49%; }
   .content-widget {
@@ -796,7 +838,9 @@ header .middle__header {
     gap: 20px; } }
 
 @media (min-width: 992px) {
-  /* Cards */
+  .container {
+    max-width: 940px;
+    margin-inline: auto; }
   .card__list .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr !important;
@@ -846,7 +890,9 @@ header .middle__header {
       height: fit-content; } }
 
 @media (min-width: 1200px) {
-  /* Cards */
+  .container {
+    max-width: 1140px;
+    margin-inline: auto; }
   .card__list .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr !important;
