--- a/assets/scss/responsive/responsive.scss
+++ b/assets/scss/responsive/responsive.scss
@@ -1,4 +1,10 @@
 @media (min-width: 575px) {
+
+  .container{
+    max-width: 540px;
+    margin-inline: auto;
+  }
+
   .card__list {
     .wrapper {
       display: grid;
@@ -9,7 +15,11 @@
 }
 
 @media (min-width: 768px) {
-  /* Cards */
+  .container{
+    max-width: 740px;
+    margin-inline: auto;
+  }
+
 
   .card__list {
     .card__item {
@@ -30,7 +40,13 @@
 }
 
 @media (min-width: 992px) {
-  /* Cards */
+
+
+  .container{
+    max-width: 940px;
+    margin-inline: auto;
+  }
+
 
   .card__list {
     .wrapper {
@@ -117,7 +133,11 @@
 }
 
 @media (min-width: 1200px) {
-  /* Cards */
+  
+  .container{
+    max-width: 1140px;
+    margin-inline: auto;
+  }
 
   .card__list {
     .wrapper {
