--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,6 +585,8 @@ header .middle__header {
         display: flex;
         justify-content: space-between;
         column-gap: 30px; }
+      header .middle__header .container .wrapper .center .search__content_desktop {
+        display: none; }
       header .middle__header .container .wrapper .right {
         display: flex;
         justify-content: space-between;
@@ -762,6 +764,11 @@ header .middle__header {
         .card__list .container .wrapper .card__item:hover i {
           text-shadow: 14px 14px 14px #212a2f; }
 
+.widgets.charts .container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; }
+
 .widgets .container {
   padding-inline: 40px;
   padding-block: 10px; }
@@ -812,11 +819,6 @@ header .middle__header {
     .widgets .container .wrapper #myChart {
       padding-inline: 20px; }
 
-.charts .container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px; }
-
 @media (min-width: 575px) {
   .container {
     max-width: 540px;
@@ -850,32 +852,7 @@ header .middle__header {
   .search__btn {
     display: none; }
   .search__content {
-    position: absolute;
-    top: 9px;
-    line-height: 30px;
-    background: var(--white);
-    color: var(--black);
-    font-size: var(--fs-8);
-    z-index: 999;
-    width: 545px;
-    display: flex;
-    visibility: visible;
-    height: auto;
-    z-index: 99999;
-    left: 686px;
-    transition: 1s; }
-    .search__content form {
-      width: 100%; }
-      .search__content form .search__input {
-        padding-inline-start: 10px;
-        padding-block: 12px;
-        background: white;
-        color: black;
-        font-size: var(--fs-8);
-        border-radius: 21px; }
-    .search__content i {
-      background: white;
-      color: black; }
+    display: none; }
   .close-btn {
     display: none; }
   .content-widget {
@@ -887,7 +864,24 @@ header .middle__header {
     grid-template-columns: 49% 49%;
     gap: 20px; }
     .charts .container .chart-bar {
-      height: fit-content; } }
+      height: fit-content; }
+  header .middle__header .container .wrapper .center .search__content_desktop {
+    display: block;
+    background: #fff;
+    width: 300px;
+    border-radius: 25px; }
+    header .middle__header .container .wrapper .center .search__content_desktop form {
+      width: 100%; }
+      header .middle__header .container .wrapper .center .search__content_desktop form .search__input {
+        padding-inline-start: 10px;
+        padding-block: 12px;
+        background: white;
+        color: black;
+        font-size: var(--fs-8);
+        border-radius: 21px; }
+    header .middle__header .container .wrapper .center .search__content_desktop i {
+      background: white;
+      color: black; } }
 
 @media (min-width: 1200px) {
   .container {
@@ -896,4 +890,6 @@ header .middle__header {
   .card__list .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr !important;
-    gap: 10px; } }
+    gap: 10px; }
+  .menu__fixed.active {
+    width: 300px; } }
