--- a/assets/scss/responsive/responsive.scss
+++ b/assets/scss/responsive/responsive.scss
@@ -1,6 +1,5 @@
 @media (min-width: 575px) {
-
-  .container{
+  .container {
     max-width: 540px;
     margin-inline: auto;
   }
@@ -15,11 +14,10 @@
 }
 
 @media (min-width: 768px) {
-  .container{
+  .container {
     max-width: 740px;
     margin-inline: auto;
   }
-
 
   .card__list {
     .card__item {
@@ -27,26 +25,22 @@
     }
   }
 
-  .content-widget{
+  .content-widget {
     display: grid !important;
     grid-template-columns: 200px 1fr;
     gap: 20px;
 
-    .number_active{
+    .number_active {
       // padding-inline: 10px;
     }
   }
-
 }
 
 @media (min-width: 992px) {
-
-
-  .container{
+  .container {
     max-width: 940px;
     margin-inline: auto;
   }
-
 
   .card__list {
     .wrapper {
@@ -62,79 +56,88 @@
     }
   }
 
-  .search__btn{
+  .search__btn {
     display: none;
   }
 
   .search__content {
-    position: absolute;
-    top: 9px;
-    line-height: 30px;
-    background: var(--white);
-    color: var(--black);
-    font-size: var(--fs-8);
-    z-index: 999;
-    width: 545px;
-    display: flex;
-    visibility: visible;
-    height: auto;
-    z-index: 99999;
-    left: 686px;
-    transition: 1s;
-
-    form {
-      width: 100%;
-
-      .search__input {
-        padding-inline-start: 10px;
-        padding-block: 12px;
-        background: white;
-        color: black;
-        font-size: var(--fs-8);
-        border-radius: 21px;
-      }
-    }
-
-    i {
-      background: white;
-      color: black;
-    }
+    display: none;
   }
+
 
   .close-btn {
     display: none;
   }
 
-  .content-widget{
+  .content-widget {
     display: grid !important;
     grid-template-columns: 200px 1fr;
     gap: 20px;
 
-    .number_active{
+    .number_active {
       // padding-inline: 10px;
     }
   }
 
-  
-.charts{
-  .container{
-    display: grid !important;
-    grid-template-columns: 49% 49%;
-    gap: 20px;
+  .charts {
+    .container {
+      display: grid !important;
+      grid-template-columns: 49% 49%;
+      gap: 20px;
 
-    .chart-bar{
-      height: fit-content;
+      .chart-bar {
+        height: fit-content;
+      }
     }
+  }
+
+  header {
+
+    .middle__header {
+
+      .container {
+
+        .wrapper
+        {
+
+          .center {
+
+            .search__content_desktop{
+              display: block;
+            background: $white;
+            width: 300px;
+            border-radius: 25px;
+
+            form {
+              width: 100%;
+      
+              .search__input {
+                padding-inline-start: 10px;
+                padding-block: 12px;
+                background: white;
+                color: black;
+                font-size: var(--fs-8);
+                border-radius: 21px;
+              }
+            }
+      
+            i {
+              background: white;
+              color: black;
+            }
+            
+          } 
+        }
+      }
+    }
+    }
+  
+  
   }
 }
 
-
-  
-}
-
 @media (min-width: 1200px) {
-  
-  .container{
+  .container {
     max-width: 1140px;
     margin-inline: auto;
   }
@@ -144,6 +147,12 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr !important;
       gap: 10px;
+    }
+  }
+
+  .menu__fixed{
+    &.active{
+      width: 300px;
     }
   }
 }
