--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,8 @@
 @import './default/menu.scss';
 @import './default/cards.scss';
 @import './default/widgets.scss';
+@import './default/pages.scss';
+@import './default/breadcrumb.scss';
 @import './responsive/responsive.scss';
 // @import './default/annimations.scss';
 // @import './default/breadcrumb.scss';
