--- a/assets/scss/default/variables.scss
+++ b/assets/scss/default/variables.scss
@@ -3,10 +3,12 @@
         * COULEURS PRINCIPALES
     */
 
-    $first-color: #011a28;
+    $first-color: #0f3e58;
+    // $first-color: #011a28;
     // $first-color: #8458B3;
     $second-color: #FF6464;
-    $third-color: #1b3340;
+    $third-color: #0f3e58;
+    // $third-color: #1b3340;
 
 
     /* 
