--- a/assets/scss/default/breadcrumb.scss
+++ b/assets/scss/default/breadcrumb.scss
@@ -20,9 +20,10 @@
         }
         li:last-child {
           a {
-            font-size: $fs-7;
+            font-size: $fs-6;
             margin-left: 10px;
-            font-weight: 100;
+            // font-weight: 100;
+            font-weight: 900;
           }
         }
       }
