--- a/assets/scss/default/pages.scss
+++ b/assets/scss/default/pages.scss
@@ -1,21 +1,72 @@
 header {
-
-    .middle__header{
-        &.pages{
-         height: auto;
-        }
+  .middle__header {
+    &.pages {
+      height: auto;
     }
+  }
 }
 
 .parametres {
-    
-    .card__item{
+  .card__item {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    h5{
+    a {
         text-align: center;
+      h6 {
+        font-size: $fs-6;
+      }
+
+      p {
+        font-size: $fs-7;
+        text-align: center;
+      }
     }
-  }}
+
+    &:hover {
+      background: $silver;
+    }
+  }
+}
+
+
+.card__body{
+    .container{
+        padding-inline: 40px;
+        padding-block: 20px;
+
+        h1{
+            color:$white;
+            font-size:$fs-6;
+        }
+        .wrapper{
+            .card__content{
+                margin-block: 10px;
+                padding-block: 10px;
+                padding-inline: 20px;
+                border-radius: 1px;
+                background:$white;
+                color:$black;
+                height:fit-content;
+                
+                form{
+                    display:flex;
+                    flex-direction: column;
+                    gap:20px;
+
+                    label{
+                        font-size: $fs-7;
+                    }
+                }
+                h2{
+                    margin-block-end: 10px;
+                    font-size:$fs-7;
+                }
+
+            
+            }
+        }
+    }
+}
